tests/NormalTests/paczka1/small_fuzzy/60463926.err
Error in line 2: CS7l A109 9,9
Error in line 3: CS7l A316 99,0
Error in line 1: MF1eVeifEu A316 54,5
